# python-statemachine

./: .checkignore  .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  INVOKE_PLAN.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  conftest.py  contributing.md  mypy.ini  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/worfklows/: pullrequestchecks.yml
.github/workflows/: codesee-arch-diagram.yml  pages.yml  python-package.yml  release.yml  test-coverage.yaml
docs/: Makefile  actions.md  api.md  api.rst  async.md  authors.md  behaviour.md  concepts.md  conf.py  contributing.md  diagram.md  error_handling.md  events.md  guards.md  index.md  index.rst  installation.md  installation.rst  integrations.md  invoke.md  jupyterlite_config.json  listeners.md  make.bat  mixins.md  models.md  observers.md  processing_model.md  quickstart.md  requirements.txt  statechart.md  statecharts.md  states.md  timeout.md  transitions.md  transitions.rst  tutorial.md  usage.rst  validations.md  weighted_transitions.md
docs/_static/: custom_machine.css
docs/auto_examples/: all_actions_machine.ipynb  all_actions_machine.py  all_actions_machine.py.md5  all_actions_machine.rst  all_actions_machine_codeobj.pickle  guess_the_number_machine.ipynb  guess_the_number_machine.py  guess_the_number_machine.py.md5  guess_the_number_machine.rst  index.rst  order_control_machine.ipynb  order_control_machine.py  order_control_machine.py.md5  order_control_machine.rst  order_control_machine_codeobj.pickle  order_control_rich_model_machine.ipynb  order_control_rich_model_machine.py  order_control_rich_model_machine.py.md5  order_control_rich_model_machine.rst  sg_execution_times.rst  traffic_light_machine.ipynb  traffic_light_machine.py  traffic_light_machine.py.md5  traffic_light_machine.rst  traffic_light_machine_codeobj.pickle
docs/examples/: approval_machine.ipynb  order_machine.ipynb  patch_repr_svg.py  traffic_light_machine.ipynb
docs/how-to/: coming_from_state_pattern.md  coming_from_transitions.md
docs/io/: formats.md  index.md  json_schema.md  security.md
docs/releases/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.2.md  0.5.0.md  0.5.1.md  0.6.0.md  0.6.1.md  0.6.2.md  0.7.0.md  0.7.1.md  0.8.0.md  0.9.0.md  1.0.0.md  1.0.1.md  1.0.2.md  1.0.3.md  2.0.0.md  2.0.1.md  2.1.0.md  2.1.1.md  2.1.2.md  2.2.0.md  2.3.0.md  2.3.1.md  2.3.2.md  2.3.3.md  2.3.4.md  2.3.5.md  2.3.6.md  2.4.0.md  2.5.0.md  2.6.0.md  3.0.0.md  3.1.0.md  3.1.1.md  3.1.2.md  3.2.0.md  3.2.1.md  index.md  (+1 more)
statemachine/: __init__.py  callable_proxy.py  callbacks.py  configuration.py  diagram.py  dispatcher.py  django.py  engine.py  event.py  event_data.py  events.py  exceptions.py  factory.py  factory_2.py  factory_3.py  graph.py  i18n.py  invoke.py  mixins.py  model.py  orderedset.py  registry.py  signature.py  spec_parser.py  state.py  statemachine.py  states.py  transition.py  transition_list.py  transition_mixin.py  trigger.py  utils.py
statemachine/contrib/: diagram.py  timeout.py  weighted.py
statemachine/engines/: async_.py  base.py  statechart.py  sync.py
statemachine/io/: __init__.py  actions.py  builder.py  class_factory.py  evaluators.py  interpreter.py  invoke.py  loader.py  model.py  native.py  ports.py  scxml.py  system_variables.py  validation.py
tests/: conftest.py  helpers.py  models.py  scrape_images.py  test_actions.py  test_api_contract.py  test_async.py  test_async_futures.py  test_callable_instance.py  test_callbacks.py  test_callbacks_isolation.py  test_class_listeners.py  test_compound.py  test_conditions_algebra.py  test_configuration.py  test_contrib_diagram.py  test_contrib_timeout.py  test_copy.py  test_deepcopy.py  test_deprecated_attrs.py  test_diagram.py  test_dispatcher.py  test_dispatcher_methodcaller.py  test_error_execution.py  test_events.py  test_examples.py  test_fellowship_quest.py  test_finalize.py  test_invoke.py  test_io.py  test_listener.py  test_mermaid_renderer.py  test_mixins.py  test_mock_compatibility.py  test_multiple_destinations.py  test_nested.py  test_observer.py  test_optional_pydot.py  test_pickle.py  test_probabilistic_transitions.py  (+30 more)
tests/benchmarks/: README.md
tests/django_project/: app.py  conftest.py  manage.py
tests/examples/: README.rst  ai_shell.py  ai_shell_machine.py  air_conditioner_machine.py  all_actions_machine.py  async_guess_the_number_machine.py  async_order_control_machine.py  async_without_loop_machine.py  enum_campaign_machine.py  game_character_idle_machine.py  guess_the_number_machine.py  lor_machine.py  microwave_inheritance_machine.py  order_control_machine.py  order_control_rich_model_machine.py  persistent_model_machine.py  recursive_event_machine.py  reusing_transitions_machine.py  sqlite_persistent_model_machine.py  statechart_cleanup_machine.py  statechart_compound_machine.py  statechart_delayed_machine.py  statechart_error_handling_machine.py  statechart_eventless_machine.py  statechart_history_machine.py  statechart_in_condition_machine.py  statechart_parallel_machine.py  traffic_light_machine.py  traffic_light_nested_machine.py  user_machine.py  weighted_idle_machine.py
tests/io/: test_format_parity.py  test_guards_parity.py  test_interpreter.py  test_loader.py  test_model.py  test_native.py  test_native_behavior.py  test_native_invoke.py  test_ports.py  test_readers.py  test_security.py  test_validation.py
tests/machines/: showcase_actions.py  showcase_compound.py  showcase_deep_history.py  showcase_guards.py  showcase_history.py  showcase_internal.py  showcase_parallel.py  showcase_parallel_compound.py  showcase_self_transition.py  showcase_simple.py  transition_from_any.py  tutorial_coffee_order.py
tests/scxml/: _harness.py  conftest.py  test_microwave.py  test_scxml_cases.py
tests/testcases/: issue308.md  issue384_multiple_observers.md  issue406.md  issue417.md  issue434.md  (+5 more)
(+481 files in other folders)
