[project]
name = "python-statemachine"
version = "3.2.0"
description = "Python Finite State Machines made easy."
authors = [{ name = "Fernando Macedo", email = "fgmacedo@gmail.com" }]
maintainers = [{ name = "Fernando Macedo", email = "fgmacedo@gmail.com" }]
license = { text = "MIT License" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/fgmacedo/python-statemachine"

[project.optional-dependencies]
diagrams = ["pydot >= 4.0.1"]
yaml = ["PyYAML >= 6.0"]
validation = ["jsonschema >= 4.18"]
io = ["PyYAML >= 6.0", "jsonschema >= 4.18"]

[dependency-groups]
dev = [
    "ruff >=0.15.17",
    "pre-commit",
    "mypy",
    "pytest >=9.1.0",
    "pytest-cov >=7.1.0",
    "pytest-sugar >=1.1.1",
    "pytest-mock >=3.15.1",
    "pytest-benchmark >=5.2.3",
    "pytest-asyncio >=1.4.0",
    "pydot",
    "django >=6.0.3; python_version >='3.12'",
    "django >=5.2.14; python_version <'3.12'",
    "pytest-django >=4.12.0",
    "Sphinx",
    "sphinx-gallery",
    "myst-parser",
    "pillow >=12.2.0",
    "sphinx-autobuild",
    "furo >=2025.12.19",
    "sphinx-copybutton >=0.5.2",
    "sphinxcontrib-mermaid",
    "pdbr>=0.9.7",
    "babel >=2.18.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
    "pyright>=1.1.410",
    "PyYAML >=6.0",
    "jsonschema >=4.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["statemachine/"]

[tool.pytest.ini_options]
addopts = [
    "-s",
    "--ignore=docs/conf.py",
    "--ignore=docs/auto_examples/",
    "--ignore=docs/_build/",
    "--ignore=tests/examples/",
    "--doctest-glob=*.md",
    "--doctest-modules",
    "--doctest-continue-on-failure",
    "--benchmark-autosave",
    "--benchmark-group-by=name",
    "--pdbcls=pdbr:RichPdb",
]
doctest_optionflags = "ELLIPSIS IGNORE_EXCEPTION_DETAIL NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
asyncio_mode = "auto"
markers = [
    """slow: marks tests as slow (deselect with '-m "not slow"')""",
    """scxml: marks a tests as scxml (deselect with '-m "not scxml"')""",
]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
xfail_strict = true
# Log level WARNING by default; the engine caches a no-op for logger.debug at
# init time, so DEBUG here would bypass that optimization and slow benchmarks.
# To enable DEBUG logging for a specific test run:
#   uv run pytest -o log_cli_level=DEBUG
log_cli_level = "WARNING"
log_cli_format = "%(relativeCreated)6.0fms %(threadName)-18s %(name)-35s %(message)s"
log_cli_date_format = "%H:%M:%S"
asyncio_default_fixture_loop_scope = "module"
filterwarnings = ["ignore::pytest_benchmark.logger.PytestBenchmarkWarning"]

[tool.coverage.run]
branch = true
# dynamic_context = "test_function"
relative_files = true
data_file = ".coverage"
source = ["statemachine"]
omit = ["*test*.py", "tmp/*", "pytest_cov"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING",
    'if __name__ == "__main__"',
]

[tool.coverage.html]
directory = "tmp/htmlcov"
show_contexts = true

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disable_error_code = "annotation-unchecked"
mypy_path = "$MYPY_CONFIG_FILE_DIR/tests/django_project"

[[tool.mypy.overrides]]
module = [
    'django.*',
    'pytest.*',
    'pydot.*',
    'sphinx_gallery.*',
    'docutils.*',
    'sphinx.*',
    'yaml.*',
]
ignore_missing_imports = true

[tool.ruff]
src = ["statemachine"]

line-length = 99
target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "auto_examples",
    "venv",
]

[tool.ruff.lint]

# Enable Pyflakes and pycodestyle rules.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "PT", # flake8-pytest-style
]
ignore = [
    "UP037", # `remove-quotes-from-type-annotation` Not safe without `from __future__ import annotations`
    "UP042", # `use-str-enum` Requires Python3.11+
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"tests/examples/**.py" = ["B018"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = true
mark-parentheses = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["statemachine"]
